MOD: cachecache to library file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,8 +18,8 @@ add_executable(crs_tri ${CRSTRI_SOURCE})
 set(GPS_SOURCE gps_opt.c gps_opt.h test_gpsopt.c)
 add_executable(gps ${GPS_SOURCE})
 
-set(PARSE_GPS_SOURCE gps_opt.c mmio.c parse_and_gps.c)
+set(PARSE_GPS_SOURCE gps_opt.c mmio.c parse_and_gps.c cachecache_test.c)
 add_executable(PG ${PARSE_GPS_SOURCE})
 
-set(CACHE_SOURCE cachecache.c)
+set(CACHE_SOURCE cachecache.c cachecache_test.c)
 add_executable(cache ${CACHE_SOURCE})
